@@ -46,7 +46,8 @@ OTHERSRCS= drop-node.c init-init.c make-node.c make-peropen.c make-protid.c   \
 	init-loop.c demuxer.c shutdown.c release-protid.c release-peropen.c   \
 	init-startup.c startup-argp.c set-options.c append-args.c	      \
 	runtime-argp.c std-runtime-argp.c std-startup-argp.c		      \
-	append-std-options.c netfs.c trans-callback.c set-get-trans.c
+	append-std-options.c trans-callback.c set-get-trans.c \
+	nref.c nrele.c nput.c
 
 SRCS= $(OTHERSRCS) $(FSSRCS) $(IOSRCS) $(FSYSSRCS) $(IFSOCKSRCS)
 
