@@ -1,3 +1,0 @@
-#define NETFS_EI
-#include "netfs.h"
-
