@@ -24,10 +24,6 @@
 #include <hurd/iohelp.h>
 #include <assert.h>
 
-#ifndef NETFS_EI
-#define NETFS_EI extern inline
-#endif
-
 /* This library supports client-side network file system
    implementations.  It is analogous to the diskfs library provided for 
    disk-based filesystems.  */
@@ -337,44 +333,9 @@ extern struct node *netfs_root_node;
 extern mach_port_t netfs_fsys_identity;
 extern auth_t netfs_auth_server_port;
 
-NETFS_EI void
-netfs_nref (struct node *np)
-{
-  spin_lock (&netfs_node_refcnt_lock);
-  np->references++;
-  spin_unlock (&netfs_node_refcnt_lock);
-}
-  
-NETFS_EI void
-netfs_nrele (struct node *np)
-{
-  spin_lock (&netfs_node_refcnt_lock);
-  assert (np->references);
-  np->references--;
-  if (np->references == 0)
-    {
-      mutex_lock (&np->lock);
-      netfs_drop_node (np);
-    }
-  else
-    spin_unlock (&netfs_node_refcnt_lock);
-}
-
-NETFS_EI void
-netfs_nput (struct node *np)
-{
-  spin_lock (&netfs_node_refcnt_lock);
-  assert (np->references);
-  np->references--;
-  if (np->references == 0)
-    netfs_drop_node (np);
-  else
-    {
-      spin_unlock (&netfs_node_refcnt_lock);
-      mutex_unlock (&np->lock);
-    }
-}
-
+void netfs_nref (struct node *np);
+void netfs_nrele (struct node *np);
+void netfs_nput (struct node *np);
 
 
 /* Mig gook. */
