@@ -1,3 +1,15 @@
+1999-07-01  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* nref.c: New file; guts from netfs.h.
+	* nrele.c: Likewise.
+	* nput.c: Likewise.
+	* netfs.h (netfs_nref, netfs_nrele, netfs_nput): Replace inline
+	definitions with normal declarations.
+	(NETFS_EI): Remove macro.
+	* netfs.c: Deleted file.
+	* Makefile (OTHERSRCS): Add nref.c, nrele.c, nput.c.  Remove
+	netfs.c. 
+	
 Thu Mar  4 07:18:21 1999  Joel N. Weber II  <devnull@theobromine.ai.mit.edu>
 
 	* dir-lookup.c (netfs_S_dir_lookup): Only set newnode to 1 if the
